--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/_tmplInforme.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/_tmplInforme.cshtml
@@ -273,7 +273,7 @@
 
 <script id="tmpl-encabezado" type="text/x-jquery-tmpl">
     <p style="text-align:center;">
-        <img width="550" style="width: 550px;" alt="" src="${urlLocalSigo}content/images/logo/osinfor-header-3.png">
+        <img width="550" height="70" style="width: 550px; height: 70px;" alt="" src="${urlLocalSigo}content/images/logo/osinfor-header-3.png">
     </p>
 </script>
 
